# EEGFrontier

./: .gitignore  EEGFrontier.kicad_pcb  EEGFrontier.kicad_sch  LICENSE  README.md  fp-lib-table
ADS1299-4PAGR/: ADS1299-4PAGR.kicad_sym
ADS1299IPAGR/: ADS1299IPAGR.kicad_sym  QFP50P1200X1200X120-64N.kicad_mod
OPL.pretty/: MODULE_102010428.kicad_mod  QFP50P1200X1200X120-64N.kicad_mod
PCB/: EEGFrontier.kicad_pcb
Pendulum/: .gitignore  README.md  pyproject.toml  requirements.txt  run_reflex.bat  run_reflex.ps1  rxconfig.py  stop_reflex.ps1
Pendulum/pendulum_eeg/: __init__.py  analysis.py  cli.py  engine.py  firmware_protocol.py  mne_tools.py  models.py  pyqt_focus.py  reflex_bridge.py  simulator.py
Pendulum/pendulum_web/: __init__.py  pendulum_web.py
SCH/: EEGFrontier.kicad_sch  sym-lib-table
bom/: Prices.csv  README.md  ibom.html
drl/: EEGFrontier-NPTH-drl.gbr  EEGFrontier-NPTH-drl_map.gbr  EEGFrontier-PTH-drl.gbr  EEGFrontier-PTH-drl_map.gbr
firmware/: platformio.ini
firmware/include/: ads1299_driver.h  fw_commands.h  fw_config.h  fw_protocol.h  fw_state.h  fw_tx.h  fw_utils.h  fw_watchdog.h
firmware/src/: ads1299_driver.cpp  fw_commands.cpp  fw_protocol.cpp  fw_state.cpp  fw_tx.cpp  fw_utils.cpp  fw_watchdog.cpp  main.cpp
firmware/test/: README.md
gerbers/: EEGFrontier-B_Cu.gbr  EEGFrontier-B_Mask.gbr  EEGFrontier-B_Paste.gbr  EEGFrontier-B_Silkscreen.gbr  EEGFrontier-Edge_Cuts.gbr  EEGFrontier-F_Cu.gbr  EEGFrontier-F_Mask.gbr  EEGFrontier-F_Paste.gbr  EEGFrontier-F_Silkscreen.gbr  EEGFrontier-job.gbrjob
(+1 files in other folders)
